--- a/samples/Quickstarts/9_Combined_AspId_and_EFStorage/src/IdentityServer/Views/User/Edit.cshtml
+++ b/samples/Quickstarts/9_Combined_AspId_and_EFStorage/src/IdentityServer/Views/User/Edit.cshtml
@@ -5,32 +5,36 @@
 
 <h2>Edit</h2>
 
-<form>
+<form asp-action="Edit" method="post">
     <input class="hide" asp-for="Id" hidden />
-    <div class="input-group">
+
+    <div class="form-group">
         <label asp-for="UserName"></label>
         <input class="form-control" asp-for="UserName" />
         <span class="text-danger" asp-validation-for="UserName"></span>
     </div>
-    <div class="input-group">
+    <div class="form-group">
         <label asp-for="Email"></label>
         <input class="form-control" asp-for="Email" />
         <span class="text-danger" asp-validation-for="Email"></span>
     </div>
-    <div class="input-group">
+    <div class="form-group">
         <label asp-for="PhoneNumber"></label>
         <input class="form-control" asp-for="PhoneNumber" />
         <span class="text-danger" asp-validation-for="PhoneNumber"></span>
     </div>
-    <div class="input-group">
-        <select asp-for="RoleName"
-                asp-items="@(new SelectList(ViewBag.roles,"Id","Name", Model.RoleName))">
+    <div class="form-group">
+        <label asp-for="RoleId"></label>
+        <select class="form-control" asp-for="RoleId"
+                asp-items="@(new SelectList(ViewBag.roles,"Name","Name", Model.RoleId))">
             <option>Please select one</option>
         </select>
+        <span class="table-danger" asp-validation-for="RoleId"></span>
     </div>
 
     <div class="form-group">
-        <input class="btn btn-primary" type="submit" value="Save" formmethod="post"/>
+        <input class="btn btn-primary" type="submit" value="Save"
+               asp-action="Edit" asp-controller="User" formmethod="post"/>
     </div>
 </form>
 
