--- a/samples/Quickstarts/9_Combined_AspId_and_EFStorage/src/IdentityServer/Views/User/Create.cshtml
+++ b/samples/Quickstarts/9_Combined_AspId_and_EFStorage/src/IdentityServer/Views/User/Create.cshtml
@@ -1,7 +1,28 @@
-﻿
+﻿@model IdentityServer.Quickstart.User.UserInputModel
 @{
     ViewData["Title"] = "Create";
 }
 
 <h2>Create</h2>
 
+<form asp-action="Create" method="post">
+    <div class="form-group">
+        <label asp-for="UserName"></label>
+        <input class="form-control" asp-for="UserName" />
+        <span class="text-danger" asp-validation-for="UserName"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="RoleName"></label>
+        <select class="form-control" asp-for="RoleName"
+                asp-items="@(new SelectList(ViewBag.roles,"Name","Name"))">
+            <option>Please select one</option>
+        </select>
+        <span class="table-danger" asp-validation-for="RoleName"></span>
+    </div>
+
+    <div class="row">
+        <input class="btn btn-primary" type="submit" value="Create"
+               asp-action="Create" asp-controller="User" formmethod="post" />
+        <a class="btn btn-info ml-1" asp-action="Index" asp-controller="User">Back to List</a>
+    </div>
+</form>
