--- a/samples/Quickstarts/9_Combined_AspId_and_EFStorage/src/IdentityServer/Views/Shared/_Layout.cshtml
+++ b/samples/Quickstarts/9_Combined_AspId_and_EFStorage/src/IdentityServer/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
     <link rel="icon" type="image/x-icon" href="~/favicon.ico" />
     <link rel="shortcut icon" type="image/x-icon" href="~/favicon.ico" />
     <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/fontawesome/css/all.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
@@ -27,7 +28,7 @@
             </span>
         </a>
 
-        <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler bg-dark" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -39,27 +40,19 @@
 
                 @if (!string.IsNullOrWhiteSpace(name))
                 {
-                    <li class="nav-item dropdown ml-auto">
-                        <a href="#" class="nav-link dropdown-toggle"
-                           data-toggle="dropdown">
-                            @name <b class="caret"></b>
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" asp-action="Logout"
-                               asp-controller="Account">Logout</a>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-action="Logout"
+                           asp-controller="Account">Logout</a>
                     </li>
                 }
             </ul>
         </div>
     </nav>
-
     <div class="container body-content">
         @RenderBody()
     </div>
-
     <script src="~/lib/jquery/jquery.min.js"></script>
-    <script src="~/lib/popper.js/dist/umd/popper.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
     @RenderSection("scripts", required: false)
 </body>
