--- a/samples/Quickstarts/9_Combined_AspId_and_EFStorage/src/IdentityServer/Views/User/Edit.cshtml
+++ b/samples/Quickstarts/9_Combined_AspId_and_EFStorage/src/IdentityServer/Views/User/Edit.cshtml
@@ -14,16 +14,6 @@
         <span class="text-danger" asp-validation-for="UserName"></span>
     </div>
     <div class="form-group">
-        <label asp-for="Email"></label>
-        <input class="form-control" asp-for="Email" />
-        <span class="text-danger" asp-validation-for="Email"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="PhoneNumber"></label>
-        <input class="form-control" asp-for="PhoneNumber" />
-        <span class="text-danger" asp-validation-for="PhoneNumber"></span>
-    </div>
-    <div class="form-group">
         <label asp-for="RoleName"></label>
         <select class="form-control" asp-for="RoleName"
                 asp-items="@(new SelectList(ViewBag.roles,"Name","Name", Model.RoleName))">
@@ -34,8 +24,13 @@
 
     <div class="form-group">
         <input class="btn btn-primary" type="submit" value="Save"
-               asp-action="Edit" asp-controller="User" formmethod="post"/>
+               asp-action="Edit" asp-controller="User" formmethod="post" />
         <a class="btn btn-info ml-1" asp-action="Index" asp-controller="User">Back to List</a>
     </div>
 </form>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+
+
+
 
