--- a/samples/Quickstarts/9_Combined_AspId_and_EFStorage/src/IdentityServer/Views/Shared/_Layout.cshtml
+++ b/samples/Quickstarts/9_Combined_AspId_and_EFStorage/src/IdentityServer/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
         </a>
 
         <button class="navbar-toggler bg-dark" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="fa fa-bars"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -52,7 +52,7 @@
         @RenderBody()
     </div>
     <script src="~/lib/jquery/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="~/lib/popper.js/umd/popper.js"></script>
     <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
     @RenderSection("scripts", required: false)
 </body>
