--- a/samples/Quickstarts/9_Combined_AspId_and_EFStorage/src/IdentityServer/Views/User/Index.cshtml
+++ b/samples/Quickstarts/9_Combined_AspId_and_EFStorage/src/IdentityServer/Views/User/Index.cshtml
@@ -33,6 +33,7 @@
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                             <a class="dropdown-item" asp-controller="User" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
                             <a class="dropdown-item" asp-controller="User" asp-action="Details" asp-route-id="@item.Id">Details</a>
+                            <a class="dropdown-item" asp-controller="User" asp-action="CreateNewPassword" asp-route-id="@item.Id">New Password</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" asp-controller="User" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                         </div>
